adds conclusion for sixth test

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -1106,6 +1106,316 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    5.8s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    5.0s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    4.6s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    4.9s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    5.9s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    5.0s finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# trying to better understand the \"architecture\" being used here\n",
+    "\n",
+    "starting_classifier = RandomForestClassifier(random_state=42)\n",
+    "final_classifier = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "clf = StackingClassifier(\n",
+    "    estimators=[ (\"rf\", starting_classifier) ],\n",
+    "    final_estimator= final_classifier,\n",
+    "    passthrough=True,\n",
+    "    verbose=1,\n",
+    "    )\n",
+    "\n",
+    "wrapped_clf = OneVsRestClassifier(clf)\n",
+    "# StackingClassifier does not natively support multilabel classification\n",
+    "# so we have to wrap it in a OneVsRestClassifier (https://scikit-learn.org/stable/modules/generated/sklearn.multiclass.OneVsRestClassifier.html)\n",
+    "# seen here: https://stackoverflow.com/questions/61309527/unable-to-do-stacking-for-a-multi-label-classifier\n",
+    "\n",
+    "wrapped_clf.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "preds = wrapped_clf.predict(datasets[\"scene\"][\"X_test\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[StackingClassifier(estimators=[('rf', RandomForestClassifier(random_state=42))],\n",
+       "                    final_estimator=RandomForestClassifier(random_state=42),\n",
+       "                    passthrough=True, verbose=1),\n",
+       " StackingClassifier(estimators=[('rf', RandomForestClassifier(random_state=42))],\n",
+       "                    final_estimator=RandomForestClassifier(random_state=42),\n",
+       "                    passthrough=True, verbose=1),\n",
+       " StackingClassifier(estimators=[('rf', RandomForestClassifier(random_state=42))],\n",
+       "                    final_estimator=RandomForestClassifier(random_state=42),\n",
+       "                    passthrough=True, verbose=1),\n",
+       " StackingClassifier(estimators=[('rf', RandomForestClassifier(random_state=42))],\n",
+       "                    final_estimator=RandomForestClassifier(random_state=42),\n",
+       "                    passthrough=True, verbose=1),\n",
+       " StackingClassifier(estimators=[('rf', RandomForestClassifier(random_state=42))],\n",
+       "                    final_estimator=RandomForestClassifier(random_state=42),\n",
+       "                    passthrough=True, verbose=1),\n",
+       " StackingClassifier(estimators=[('rf', RandomForestClassifier(random_state=42))],\n",
+       "                    final_estimator=RandomForestClassifier(random_state=42),\n",
+       "                    passthrough=True, verbose=1)]"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrapped_clf.estimators_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[RandomForestClassifier(random_state=42)]"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrapped_clf.estimators_[0].estimators_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "294"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrapped_clf.estimators_[0].estimators_[0].n_features_in_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "295"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrapped_clf.estimators_[0].final_estimator_.n_features_in_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08974358974358974"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.684223851314326"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# trying to replicate simple binary relevance results\n",
+    "\n",
+    "base_classifier = RandomForestClassifier(random_state=42)\n",
+    "br_simulator = OneVsRestClassifier(base_classifier)\n",
+    "br_simulator.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "preds = br_simulator.predict(datasets[\"scene\"][\"X_test\"])\n",
+    "\n",
+    "display(metrics.hamming_loss(datasets[\"scene\"][\"y_test\"], preds))\n",
+    "display(metrics.f1_score(datasets[\"scene\"][\"y_test\"], preds, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "294\n",
+      "294\n",
+      "294\n",
+      "294\n",
+      "294\n",
+      "294\n"
+     ]
+    }
+   ],
+   "source": [
+    "for clf in br_simulator.estimators_:\n",
+    "    print(clf.n_features_in_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "br_simulator.multilabel_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08974358974358974"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.684223851314326"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "actual_br = BinaryRelevance(\n",
+    "    classifier=RandomForestClassifier(random_state=42),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "actual_br.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "preds = actual_br.predict(datasets[\"scene\"][\"X_test\"])\n",
+    "\n",
+    "display(metrics.hamming_loss(datasets[\"scene\"][\"y_test\"], preds))\n",
+    "display(metrics.f1_score(datasets[\"scene\"][\"y_test\"], preds, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same object check False\n",
+      "FIT: X shape is (1211, 294)\n",
+      "FIT: summing the values (for first layer): 1286\n",
+      "FIT: X_extended shape is (1211, 300)\n",
+      "PREDICT: X shape is (1196, 294)\n",
+      "PREDICT: summing the values (for first layer): 791\n",
+      "PREDICT: X_extended shape is (1196, 300)\n",
+      "PREDICT: summing the values (for second layer): 790\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.08960423634336678"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.684628539219014"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "my_stacking = DebuggingBasicStacking(\n",
+    "    classifier=RandomForestClassifier(random_state=42),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "my_stacking.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
+    "preds = my_stacking.predict(datasets[\"scene\"][\"X_test\"])\n",
+    "\n",
+    "display(metrics.hamming_loss(datasets[\"scene\"][\"y_test\"], preds))\n",
+    "display(metrics.f1_score(datasets[\"scene\"][\"y_test\"], preds, average=\"macro\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1213,7 +1523,21 @@
     "\n",
     "With that in mind, I also tried to just use the base classifier, which is the `RandomForestClassifier`, instead of the `BinaryRelevance`. In this case the pipeline works, and in theory, the `OneVsRest` make it behave just like a `BinaryRelevance`.\n",
     "\n",
-    "The final scores are actually quite good. Much better than either the `BinaryRelevance` or my `BasicStacking`, or the `StackingWithFTest`. It is not immediately clear the actual architecture that is going on in this case. So I am not sure if I am comparing apples to apples here.\n",
+    "The final scores are actually quite good. Much better than either the `BinaryRelevance` or my `BasicStacking`, or the `StackingWithFTest`. It is **not** immediately clear the actual architecture that is going on in this case. So I am not sure if I am comparing apples to apples here.\n",
+    "\n",
+    "To actually get info for this, I tried to replicate the simple `BinaryRelevance` model, with `OneVsRestClassifier`, and then replicate the actual stacking, and checking if the results are similar in all places.\n",
+    "\n",
+    "When investigating the `OneVsRestClassifier`, by using it as a wrapper to the `StackingClassifier`, it shows that is not doing a stacking as per the regular way of having a first and a second layer. Instead, it trains one \"stacked classifier\" for each label. Therefore, we have 6 \"stacked classifier\". And on each \"stacked classifier\", the first base classifier (in this case, a `RandomForestClassifier`) receives 294 features, while the final base classifier takes 295 features, the additional feature being the prediction of the first base classifier.\n",
+    "\n",
+    "When attempting to replicate the `BinaryRelevance` with `OneVsRest`, we actually get the very same results. For `BinaryRelevance`, we get 0.684223851314326. For `OneVsRest` (with a single layer), we get 0.684223851314326. Which is the same.\n",
+    "\n",
+    "For the stacking... When using `OneVsRest`, we get 0.6830985019980916. For my own stacking implementation, we get 0.684628539219014, which is different and it is a little bit more. It is also a little bit over the `BinaryRelevance`.\n",
+    "\n",
+    "This alone does _not_ confirm that I am doing stacking correctly. But I can confirm that the `StackingClassifier` / `OneVsRest` **cannot** replicate the stacking expected, where all the predicted labels from the first layer are used as input for the second layer.\n",
+    "\n",
+    "However, considering that the metrics are so far are adding up (the results are different on each iteration), and that my `BasicStacking` is so far doing better (even if just a bit) than all the rest, shows that I am on the right track.\n",
+    "\n",
+    "Considering that all of this is not really the focus of my research, right now I see no reason in trying many other alternatives. The only two things I still want to try is to compare metrics to `StackingWithFTest` with `alpha=1`, and to make sure that the `BasicStacking` is really expanding all labels but the label being predicted.\n",
     "\n",
     "### Seventh test: make sure that the `BasicStacking` expands all labels but the label being predicted\n",
     "\n",
