--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -406,6 +406,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First test: check shape of the features (shape of X)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -430,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "**Notes**\n",
     "\n",
     "A few `print`s were added to the code to revel the shape of `X`, both at the first layer and at the second layer. Result:\n",
     "\n",
