moves more cells

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -450,6 +450,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Second test: check if the base classifier itself is being trained with the new features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -504,6 +511,41 @@
     "print(\"second layer\")\n",
     "for clf in m.second_layer_classifiers.classifiers_:\n",
     "    print(clf.n_features_in_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The existing properties being set by `BinaryRelevance` already make it possible to investigate each classifier of either the first or the second layer.\n",
+    "\n",
+    "The property `n_features_in`, from the [SVC](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html), inform how many features were observed during `fit()`. This is the property we are going to use to check if the base classifiers are being trained with the new features.\n",
+    "\n",
+    "```\n",
+    "first layer\n",
+    "294\n",
+    "294\n",
+    "294\n",
+    "294\n",
+    "294\n",
+    "294\n",
+    "second layer\n",
+    "300\n",
+    "300\n",
+    "300\n",
+    "300\n",
+    "300\n",
+    "300\n",
+    "```\n",
+    "\n",
+    "**The base classifiers from the second layer are really receiving all the new features. This is good.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Third test: check if the new features have values"
    ]
   },
   {
@@ -644,6 +686,29 @@
    ],
    "source": [
     "2585/(2407 * 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "```\n",
+    "FIT: X shape is (1211, 294)\n",
+    "FIT: Summing the values: 1019\n",
+    "FIT: X_extended shape is (1211, 300)\n",
+    "PREDICT: X shape is (1196, 294)\n",
+    "Summing the values: 901\n",
+    "PREDICT: X_extended shape is (1196, 300)\n",
+    "```\n",
+    "\n",
+    "**The extended features really have values, and they are not all zeros. This is good**. We can also see that they differ from `fit` to `predict`, which is also showing that we are _not_ doing a simple mistake such as using the same data in both places.\n",
+    "\n",
+    "The share of zeros, however, is something to consider. For the `fit` phase, only 14% of the values have a value different from zero. For the `predict` phase, this share is 12%. Both values are less than the share found in the full dataset, which is around ~17%.\n",
+    "\n",
+    "Is it possible that the \"stacking part\" is making the model drop its performance? **It might be worthy to check a pure `BinaryRelevance` output**.\n",
+    "\n",
+    "At first, iy might be tempting to think that the problem is the dataset being used. But remember that in the first notebook, we conduct a very similar test, comparing the output of `BinaryRelevance` and `BasicStacking`, and the results were identical for all datasets tested."
    ]
   },
   {
@@ -1436,60 +1501,6 @@
     "\n",
     "display(metrics.hamming_loss(datasets[\"scene\"][\"y_test\"], preds))\n",
     "display(metrics.f1_score(datasets[\"scene\"][\"y_test\"], preds, average=\"macro\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Second test: check if the base classifier itself is being trained with the new features\n",
-    "\n",
-    "The existing properties being set by `BinaryRelevance` already make it possible to investigate each classifier of either the first or the second layer.\n",
-    "\n",
-    "The property `n_features_in`, from the [SVC](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html), inform how many features were observed during `fit()`. This is the property we are going to use to check if the base classifiers are being trained with the new features.\n",
-    "\n",
-    "```\n",
-    "first layer\n",
-    "294\n",
-    "294\n",
-    "294\n",
-    "294\n",
-    "294\n",
-    "294\n",
-    "second layer\n",
-    "300\n",
-    "300\n",
-    "300\n",
-    "300\n",
-    "300\n",
-    "300\n",
-    "```\n",
-    "\n",
-    "**The base classifiers from the second layer are really receiving all the new features. This is good.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Third test: check if the new features have values\n",
-    "\n",
-    "```\n",
-    "FIT: X shape is (1211, 294)\n",
-    "FIT: Summing the values: 1019\n",
-    "FIT: X_extended shape is (1211, 300)\n",
-    "PREDICT: X shape is (1196, 294)\n",
-    "Summing the values: 901\n",
-    "PREDICT: X_extended shape is (1196, 300)\n",
-    "```\n",
-    "\n",
-    "**The extended features really have values, and they are not all zeros. This is good**. We can also see that they differ from `fit` to `predict`, which is also showing that we are _not_ doing a simple mistake such as using the same data in both places.\n",
-    "\n",
-    "The share of zeros, however, is something to consider. For the `fit` phase, only 14% of the values have a value different from zero. For the `predict` phase, this share is 12%. Both values are less than the share found in the full dataset, which is around ~17%.\n",
-    "\n",
-    "Is it possible that the \"stacking part\" is making the model drop its performance? **It might be worthy to check a pure `BinaryRelevance` output**.\n",
-    "\n",
-    "At first, iy might be tempting to think that the problem is the dataset being used. But remember that in the first notebook, we conduct a very similar test, comparing the output of `BinaryRelevance` and `BasicStacking`, and the results were identical for all datasets tested."
    ]
   },
   {
