finishes moving cells

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -692,6 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Notes**\n",
     "\n",
     "```\n",
     "FIT: X shape is (1211, 294)\n",
@@ -709,6 +710,13 @@
     "Is it possible that the \"stacking part\" is making the model drop its performance? **It might be worthy to check a pure `BinaryRelevance` output**.\n",
     "\n",
     "At first, iy might be tempting to think that the problem is the dataset being used. But remember that in the first notebook, we conduct a very similar test, comparing the output of `BinaryRelevance` and `BasicStacking`, and the results were identical for all datasets tested."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fourth test: testing a pure `BinaryRelevance` model"
    ]
   },
   {
@@ -964,6 +972,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Notes**\n",
+    "\n",
+    "~A pure `BinaryRelevance` manages to be _worse_ than the first layer of the `BasicStacking` model. This is really weird. It only gets 901 labels, instead of 1019.~ A pure `BinaryRelevance` is performing exactly equal to the first layer of the `BasicStacking`, which is actually expected. What is weird is that the number of labels found is exactly the same: 901. **What is weird is that both the first and second layer return the exact same number of labels, regardless of the extra features being added to the second layer.**\n",
+    "\n",
+    "Could it be something with the `random_stage`? **But even after changing the `random_state` to absurd numbers, the results are always the same**. This is totally weird. It is like `SVC` is caching the results or something like that. Or maybe `BinaryRelevance` is keeping a cache of some sort. This is weird, as the source code of `scikit-multilearn` does _not_ describe any cache. It uses `copy.deepcopy`. Maybe this function is the one doing the cache thing? I made a quick Google search about this, but I found nothing conclusive.\n",
+    "\n",
+    "Or maybe this is down to how `SVC` works. With all its default parameters, it really _is_ stopping at the same point. ~But why it finds more labels when being used via the `BasicStacking` model? This cannot be explained by the `SVC` internal workings alone.~ Actually it is finding the same quantity of labels. I made some confusion because I compared the labels found during `fit` to those found during `predict`. If I compare the labels from `predict` only, then the results are exactly the same.\n",
+    "\n",
+    "When using different base classifiers, such as the `RandomForestClassifier`, the results are different. **It finds _less_ labels than `SVC`, but at least the results differ when running with different `random_state`s**.\n",
+    "\n",
+    "Perhaps the way forward is to use `RandomForestClassifier` instead of `SVC` as the base classifier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fifth test: using `RandomForestClassifier` as the base classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
@@ -1037,6 +1069,24 @@
     "m = DebuggingBasicStacking(classifier=RandomForestClassifier(random_state=94389473))\n",
     "m.fit(datasets[\"scene\"][\"X_train\"], datasets[\"scene\"][\"y_train\"])\n",
     "m.predict(datasets[\"scene\"][\"X_test\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Notes**\n",
+    "\n",
+    "The usage of `RandomForestClassifier` show that, by using other base classifier, it is possible to achieve different results for the first and second layer. In this case, the `BasicStacking` really differs from the `BinaryRelevance` model, which is what we wanted to achieve in the first place.\n",
+    "\n",
+    "The results are still **not** that great, as even the `RandomForestClassifier` generate actually little difference from the first to the second layer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sixth test: use scikit's `StackingClassifier`"
    ]
   },
   {
@@ -1507,35 +1557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fourth test: testing a pure `BinaryRelevance` model\n",
-    "\n",
-    "~A pure `BinaryRelevance` manages to be _worse_ than the first layer of the `BasicStacking` model. This is really weird. It only gets 901 labels, instead of 1019.~ A pure `BinaryRelevance` is performing exactly equal to the first layer of the `BasicStacking`, which is actually expected. What is weird is that the number of labels found is exactly the same: 901. **What is weird is that both the first and second layer return the exact same number of labels, regardless of the extra features being added to the second layer.**\n",
-    "\n",
-    "Could it be something with the `random_stage`? **But even after changing the `random_state` to absurd numbers, the results are always the same**. This is totally weird. It is like `SVC` is caching the results or something like that. Or maybe `BinaryRelevance` is keeping a cache of some sort. This is weird, as the source code of `scikit-multilearn` does _not_ describe any cache. It uses `copy.deepcopy`. Maybe this function is the one doing the cache thing? I made a quick Google search about this, but I found nothing conclusive.\n",
-    "\n",
-    "Or maybe this is down to how `SVC` works. With all its default parameters, it really _is_ stopping at the same point. ~But why it finds more labels when being used via the `BasicStacking` model? This cannot be explained by the `SVC` internal workings alone.~ Actually it is finding the same quantity of labels. I made some confusion because I compared the labels found during `fit` to those found during `predict`. If I compare the labels from `predict` only, then the results are exactly the same.\n",
-    "\n",
-    "When using different base classifiers, such as the `RandomForestClassifier`, the results are different. **It finds _less_ labels than `SVC`, but at least the results differ when running with different `random_state`s**.\n",
-    "\n",
-    "Perhaps the way forward is to use `RandomForestClassifier` instead of `SVC` as the base classifier."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fifth test: using `RandomForestClassifier` as the base classifier\n",
-    "\n",
-    "The usage of `RandomForestClassifier` show that, by using other base classifier, it is possible to achieve different results for the first and second layer. In this case, the `BasicStacking` really differs from the `BinaryRelevance` model, which is what we wanted to achieve in the first place.\n",
-    "\n",
-    "The results are still **not** that great, as even the `RandomForestClassifier` generate actually little difference from the first to the second layer."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Sixth test: use scikit's `StackingClassifier`\n",
+    "**Notes**\n",
     "\n",
     "The purpose of this is to sort of \"sanity check\" my own implementation of _stacking_. However, it is **not** possible to conduct such a test as the `BinaryRelevance` does not seem to be really ready to be used in the `StackingClassifier` pipeline. Or, as the `StackingClassifier` does not support multilabel and we have to wrap in on a `OneVsRestClassifier`, maybe it does not really work for the `BinaryRelevance` as we are _not_ training one `BinaryRelevance` for each label (each class). Instead, we should be training one `BinaryRelevance` for all labels.\n",
     "\n",
@@ -1555,8 +1577,13 @@
     "\n",
     "However, considering that the metrics are so far are adding up (the results are different on each iteration), and that my `BasicStacking` is so far doing better (even if just a bit) than all the rest, shows that I am on the right track.\n",
     "\n",
-    "Considering that all of this is not really the focus of my research, right now I see no reason in trying many other alternatives. The only two things I still want to try is to compare metrics to `StackingWithFTest` with `alpha=1`, and to make sure that the `BasicStacking` is really expanding all labels but the label being predicted.\n",
-    "\n",
+    "Considering that all of this is not really the focus of my research, right now I see no reason in trying many other alternatives. The only two things I still want to try is to compare metrics to `StackingWithFTest` with `alpha=1`, and to make sure that the `BasicStacking` is really expanding all labels but the label being predicted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Seventh test: make sure that the `BasicStacking` expands all labels but the label being predicted\n",
     "\n",
     "...\n",
