adds numbers to titles

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -409,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### First test: check shape of the features (shape of X)"
+    "### 8.4.1. First test: check shape of the features (shape of X)"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Second test: check if the base classifier itself is being trained with the new features"
+    "### 8.4.2. Second test: check if the base classifier itself is being trained with the new features"
    ]
   },
   {
@@ -545,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Third test: check if the new features have values"
+    "### 8.4.3. Third test: check if the new features have values"
    ]
   },
   {
@@ -716,7 +716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fourth test: testing a pure `BinaryRelevance` model"
+    "### 8.4.4. Fourth test: testing a pure `BinaryRelevance` model"
    ]
   },
   {
@@ -992,7 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fifth test: using `RandomForestClassifier` as the base classifier"
+    "### 8.4.5. Fifth test: using `RandomForestClassifier` as the base classifier"
    ]
   },
   {
@@ -1086,7 +1086,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sixth test: use scikit's `StackingClassifier`"
+    "### 8.4.6. Sixth test: use scikit's `StackingClassifier`"
    ]
   },
   {
