starts seventh test; moves imports

--- a/8_debugging_the_basic_stacking_model.ipynb
+++ b/8_debugging_the_basic_stacking_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,9 @@
     "import json\n",
     "import pandas as pd\n",
     "from sklearn.feature_selection import f_classif\n",
-    "from evaluation import EvaluationPipeline\n"
+    "from evaluation import EvaluationPipeline\n",
+    "from sklearn.ensemble import StackingClassifier, RandomForestClassifier\n",
+    "from sklearn.multiclass import OneVsRestClassifier"
    ]
   },
   {
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -847,8 +849,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
     "rf_br = BinaryRelevance(\n",
     "    classifier=RandomForestClassifier(random_state=42),\n",
     "    require_dense=[False, True]\n",
@@ -1150,9 +1150,6 @@
    ],
    "source": [
     "# sixth test\n",
-    "\n",
-    "from sklearn.ensemble import StackingClassifier\n",
-    "from sklearn.multiclass import OneVsRestClassifier\n",
     "\n",
     "# class FixedBR(BinaryRelevance):\n",
     "#     def fit(self, X: Any, y: Any):\n",
@@ -1586,8 +1583,106 @@
    "source": [
     "### Seventh test: make sure that the `BasicStacking` expands all labels but the label being predicted\n",
     "\n",
-    "...\n",
+    "According to the article identified by `[6] AnEfficientStackingModelWithLabelSelection.pdf`, the **Stacked Generalization** algorithm should be implemented just like I implemented the `BasicStacking`, expanding all predicted labels from the first layer as input to the second layer.\n",
     "\n",
+    "The **Dependant Binary Relevance** is a very similar approach, but it expands all labels but the label being predicted for a particular classifier of the second layer.\n",
+    "\n",
+    "For the Stacked Generalization, we have a scenario in which, for a given label `l`, the second layer will predict `l` also based on the prediction for `l` that came from the first layer. For the Dependant Binary Relevance, we have a scenario in which, for a given label `l`, the second layer will predict `l` based on the prediction for all other labels, but not `l`, that came from the first layer.\n",
+    "\n",
+    "This might or might improve the metrics. Let's see. Either way, it is an important base classifier to have."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RandomForestClassifier' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-b588ae5dfcf9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mDependantBinaryRelevance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mProblemTransformationBase\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mfirst_layer_classifiers\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mBinaryRelevance\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0msecond_layer_classifiers\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mAny\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mAny\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrequire_dense\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mbool\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-6-b588ae5dfcf9>\u001b[0m in \u001b[0;36mDependantBinaryRelevance\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0msecond_layer_classifiers\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mAny\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mAny\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrequire_dense\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mbool\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'RandomForestClassifier' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class DependantBinaryRelevance(ProblemTransformationBase):\n",
+    "    first_layer_classifiers: BinaryRelevance\n",
+    "    second_layer_classifiers: List[Any]\n",
+    "\n",
+    "    def __init__(self, classifier: Any = RandomForestClassifier(), require_dense: Optional[List[bool]] = None):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.first_base_classifier = copy.deepcopy(classifier)\n",
+    "        self.second_base_classifier = copy.deepcopy(classifier)\n",
+    "\n",
+    "        self.first_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=self.first_base_classifier,\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "\n",
+    "        self.second_layer_classifiers = []\n",
+    "\n",
+    "        # self.second_layer_classifiers = BinaryRelevance(\n",
+    "        #     classifier=second_base_classifier,\n",
+    "        #     require_dense=[False, True]\n",
+    "        # )\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        print(f\"FIT: X shape is {X.shape}\")\n",
+    "        self.first_layer_classifiers.fit(X, y)\n",
+    "\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        formatted_first_layer_predictions = first_layer_predictions.todense()\n",
+    "        X_expanded = np.hstack([X.todense(), formatted_first_layer_predictions])\n",
+    "\n",
+    "        first_layer_sum = np.sum(np.sum(formatted_first_layer_predictions, axis=1))\n",
+    "        print(\"FIT: summing the values (for first layer):\", first_layer_sum)\n",
+    "\n",
+    "        labels_count = y.shape[1]\n",
+    "\n",
+    "        for i in range(labels_count):\n",
+    "            additional_input = formatted_first_layer_predictions[:, ~i]\n",
+    "            print(f\"FIT: additional input shape is {additional_input.shape}\")\n",
+    "\n",
+    "\n",
+    "        # print(f\"FIT: X_extended shape is {X_expanded.shape}\")\n",
+    "        # self.second_layer_classifiers.fit(X_expanded, y)\n",
+    "    \n",
+    "    def predict(self, X: Any): # type: ignore\n",
+    "        print(f\"PREDICT: X shape is {X.shape}\")\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        formatted_first_layer_predictions = first_layer_predictions.todense()\n",
+    "\n",
+    "        X_expanded = np.hstack([X.todense(), formatted_first_layer_predictions])\n",
+    "\n",
+    "        print(\"PREDICT: summing the values (for first layer):\", np.sum(np.sum(formatted_first_layer_predictions, axis=1)))\n",
+    "        print(f\"PREDICT: X_extended shape is {X_expanded.shape}\")\n",
+    "\n",
+    "        second_layer_predictions = self.second_layer_classifiers.predict(X_expanded)\n",
+    "        formatted_second_layer_predictions = second_layer_predictions.todense()\n",
+    "\n",
+    "        print(\"PREDICT: summing the values (for second layer):\", np.sum(np.sum(formatted_second_layer_predictions, axis=1)))\n",
+    "\n",
+    "        return second_layer_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Eighth test: compare metrics to `StackingWithFTest` when `alpha=1`\n",
     "\n",
     "..."
